--- a/public/assets/css/Shopcart.css
+++ b/public/assets/css/Shopcart.css
@@ -35,7 +35,7 @@
 .cart-foot {
     float: left;
     position: fixed;
-    bottom: 1rem;
+    bottom: .9rem;
     height: 1rem;
     line-height: 1rem;
     width: 100%;
