首页样式修改

--- a/public/assets/css/Shopcart.css
+++ b/public/assets/css/Shopcart.css
@@ -17,11 +17,11 @@
     margin: 0 auto;
 }
 
-.cart-header-edit {
+/* .cart-header-edit {
     position: absolute;
     right: .35rem;
     top: .35rem;
-}
+} */
 
 .icon-sousuo {
     font-size: 0.48rem;
