--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -63,3 +63,15 @@
 .icon-jingli:before {
   content: "\e712";
 }
+
+/* .icon-dianpu:before {
+  content: "\e736";
+}
+
+.icon-dingdan:before {
+  content: "\e737";
+}
+
+.icon-gouwuche:before {
+  content: "\e73d";
+} */
